--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,8 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
 
-  xservice_kit: ^0.0.27
-
+  xservice_kit_androidx:
+    git:
+      url: 'https://github.com/tangtang-feng/xservice_kit.git'
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
