--- a/android/build.gradle
+++ b/android/build.gradle
@@ -37,6 +37,8 @@ dependencies {
     implementation 'com.alibaba:fastjson:1.2.41'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'android.arch.lifecycle:common-java8:1.1.1'
+
 }
 
 ext {
