--- a/example/android/app/build.gradle
+++ b/example/android/app/build.gradle
@@ -60,4 +60,6 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.android.support:support-v4:26.1.0'
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    implementation 'android.arch.lifecycle:common-java8:1.1.1'
+
 }
