--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,7 +19,11 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
+#  cupertino_icons: ^0.1.2
+#  orientation: ^1.1.0                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                        `
+#  shared_preferences: 0.5.6
+#  url_launcher: 5.4.1
+#  path_provider:  1.5.1
 
 dev_dependencies:
   flutter_test:
