--- a/android/build.gradle
+++ b/android/build.gradle
@@ -35,11 +35,10 @@ android {
 }
 
 dependencies {
-    compileOnly 'androidx.legacy:legacy-support-v4:1.0.0'
-    compileOnly 'com.google.android.material:material:1.0.0'
-    compileOnly 'androidx.appcompat:appcompat:1.0.0'
-    compileOnly 'androidx.annotation:annotation:1.0.0'
-    implementation 'androidx.lifecycle:lifecycle-common-java8:2.1.0'
+    compileOnly 'com.android.support:appcompat-v7:28.0.0'
+    compileOnly 'com.android.support:design:28.0.0'
+    compileOnly 'com.android.support:support-v4:28.0.0'
+    implementation 'android.arch.lifecycle:common-java8:1.1.1'
     compileOnly 'com.alibaba:fastjson:1.2.41'
 
 }
