--- a/example3.0/pubspec.yaml
+++ b/example3.0/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -34,7 +34,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_boost:
-    path: ../
+    path: ../flutter_boost_master_null_safety
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
