更新至v3.0-null-safety-preview.10

--- a/example_new/pubspec.yaml
+++ b/example_new/pubspec.yaml
@@ -34,7 +34,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_boost:
-    path: ../flutter_boost_master_null_safety
+    path: ../
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
