--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -10,7 +10,7 @@ description: Demonstrates how to use the flutter_boost plugin.
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.0.0-dev.68.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 dependencies:
   flutter:
@@ -18,10 +18,10 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: 1.0.3
-  image_picker: 0.8.4+1
-  video_player: 2.2.3
-  webview_flutter: 2.0.13
+  cupertino_icons: ^1.0.5
+  image_picker: ^0.8.5+3
+  video_player: ^2.2.17
+  webview_flutter: ^3.0.4
 
 dev_dependencies:
   flutter_test:
@@ -29,6 +29,7 @@ dev_dependencies:
 
   flutter_boost:
     path: ../
+  flutter_lints: ^1.0.4
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
