--- a/android/build.gradle
+++ b/android/build.gradle
@@ -38,6 +38,11 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    // Conditional for compatibility with AGP <4.2.
+    if (project.android.hasProperty("namespace")) {
+        namespace 'com.idlefish.flutterboost'
+    }
 }
 
 dependencies {
