--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -5,8 +5,8 @@ version: 4.4.2
 homepage: https://github.com/alibaba/flutter_boost
 
 environment:
-  sdk: '>=2.12.0 <4.0.0'
-  flutter: ">=3.0.0"
+  sdk: ">=3.2.0 <4.0.0"
+  flutter: ">=3.16.0"
 
 dependencies:
   flutter:
