fix: android add namespace

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -22,6 +22,9 @@ rootProject.allprojects {
 apply plugin: 'com.android.library'
 
 android {
+    if (project.android.hasProperty("namespace")) {
+        namespace 'com.idlefish.flutterboost'
+    }
     compileSdkVersion 31
     buildToolsVersion '30.0.2'
     defaultConfig {
