--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,32 @@ example/android/app/.project
 example/android/.project
 flutter_boost
 .flutter-plugins-dependencies
+
+# ohos
+example/ohos/entry/libs/
+example/ohos/entry/har/
+example/ohos/har/
+example/ohos/node_modules
+example/ohos/oh_modules
+example/ohos/.idea
+example/ohos/build
+example/ohos/.hvigor
+example/ohos/.cxx
+example/ohos/.clangd
+example/ohos/.clang-format
+example/ohos/.clang-tidy
+example/ohos**/.test
+
+ohos/entry/libs/
+ohos/entry/har/
+ohos/har/
+ohos/node_modules
+ohos/oh_modules
+ohos/.idea
+ohos/build
+ohos/.hvigor
+ohos/.cxx
+ohos/.clangd
+ohos/.clang-format
+ohos/.clang-tidy
+ohos**/.test
