--- a/example/ohos/hvigor/hvigor-config.json5
+++ b/example/ohos/hvigor/hvigor-config.json5
@@ -12,10 +12,10 @@
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
-{
-  "hvigorVersion": "file:../dependencies/hvigor-3.0.9-s.tgz",
+
+{ 
+  "hvigorVersion": "4.0.2",
   "dependencies": {
-    "@ohos/hvigor-ohos-plugin": "file:../dependencies/hvigor-ohos-plugin-3.0.9-s.tgz",
-    "rollup": "file:../dependencies/rollup.tgz",
+    "@ohos/hvigor-ohos-plugin": "4.0.2"
   }
 }
