--- a/ohos/hvigor/hvigor-config.json5
+++ b/ohos/hvigor/hvigor-config.json5
@@ -13,10 +13,9 @@
 * limitations under the License.
 */
 
-{
-  "hvigorVersion": "file:../dependencies/hvigor-3.0.9-s.tgz",
+{ 
+  "hvigorVersion": "4.0.2",
   "dependencies": {
-    "@ohos/hvigor-ohos-plugin": "file:../dependencies/hvigor-ohos-plugin-3.0.9-s.tgz",
-    "rollup": "file:../dependencies/rollup.tgz",
+    "@ohos/hvigor-ohos-plugin": "4.0.2"
   }
 }
