replace flutter_ohos devDependencies with dependencies

--- a/ohos/flutter_boost/oh-package.json5
+++ b/ohos/flutter_boost/oh-package.json5
@@ -5,7 +5,7 @@
   "main": "index.ets",
   "author": "",
   "license": "Apache-2.0",
-  "devDependencies": {
+  "dependencies": {
     "@ohos/flutter_ohos": "file:./libs/flutter_ohos.har"
   }
 }
