example改为overrides依赖@ohos/flutter_ohos

--- a/example/ohos/oh-package.json5
+++ b/example/ohos/oh-package.json5
@@ -8,5 +8,8 @@
   "description": "Please describe the basic information.",
   "main": "",
   "version": "1.0.0",
-  "dependencies": {}
+  "dependencies": {},
+  "overrides": {
+    "@ohos/flutter_ohos": "file:./har/flutter_embedding.har"
+  }
 }
