rename dependencies of flutter.har
Signed-off-by: xiaoxiang <xx266218@alibaba-inc.com>

--- a/example/ohos/oh-package.json5
+++ b/example/ohos/oh-package.json5
@@ -10,6 +10,6 @@
   "version": "1.0.0",
   "dependencies": {},
   "overrides": {
-    "@ohos/flutter_ohos": "file:./har/flutter_embedding.har"
+    "@ohos/flutter_ohos": "file:./har/flutter.har"
   }
 }
