--- a/ohos/flutter_boost/oh-package.json5
+++ b/ohos/flutter_boost/oh-package.json5
@@ -6,6 +6,6 @@
   "author": "",
   "license": "Apache-2.0",
   "dependencies": {
-    "@ohos/flutter_ohos": "file:./libs/flutter_ohos.har"
+    "@ohos/flutter_ohos": "file:./libs/flutter.har"
   }
 }
