--- a/example/ohos/entry/oh-package.json5
+++ b/example/ohos/entry/oh-package.json5
@@ -8,6 +8,6 @@
   "version": "1.0.0",
   "dependencies": {
     "@ohos/flutter_boost": "file:./har/flutter_boost.har",
-    "@ohos/flutter_ohos": "file:../har/flutter_embedding.har"
+    "@ohos/flutter_ohos": "file:../har/flutter.har"
   }
 }
