--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,15 +19,17 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
-  image_picker:
+  image_picker: 1.0.2
+  image_picker_ohos:
     git:
       url: "https://gitee.com/openharmony-sig/flutter_packages.git"
-      path: "packages/image_picker/image_picker"
+      path: "packages/image_picker/image_picker_ohos"
   mime: ^1.0.4
-  video_player:
+  video_player: 2.7.1
+  video_player_ohos:
     git:
       url: "https://gitee.com/openharmony-sig/flutter_packages.git"
-      path: "packages/video_player/video_player"
+      path: "packages/video_player/video_player_ohos"
   webview_flutter: ^3.0.4
   dual_screen: ^1.0.3
 
