--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -19,19 +19,31 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
+  dual_screen: ^1.0.3
   image_picker: 1.0.2
   image_picker_ohos:
     git:
       url: "https://gitee.com/openharmony-sig/flutter_packages.git"
       path: "packages/image_picker/image_picker_ohos"
   mime: ^1.0.4
+  path_provider: 2.1.0
+  path_provider_ohos:
+    git:
+      url: "https://gitee.com/openharmony-sig/flutter_packages.git"
+      path: "packages/path_provider/path_provider_ohos"
+  path_provider_platform_interface: ^2.0.0
   video_player: 2.7.1
   video_player_ohos:
     git:
       url: "https://gitee.com/openharmony-sig/flutter_packages.git"
       path: "packages/video_player/video_player_ohos"
-  webview_flutter: ^3.0.4
-  dual_screen: ^1.0.3
+  webview_flutter: 4.2.4
+  webview_flutter_ohos:
+    git:
+      url: "https://gitee.com/openharmony-sig/flutter_packages.git"
+      path: "packages/webview_flutter/webview_flutter_ohos"
+  webview_flutter_platform_interface: ^2.4.0
+
 
 dev_dependencies:
   flutter_test:
