--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -20,30 +20,23 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.5
   dual_screen: ^1.0.3
-  image_picker: 1.0.2
-  image_picker_ohos:
+  image_picker:
     git:
       url: "https://gitee.com/openharmony-sig/flutter_packages.git"
-      path: "packages/image_picker/image_picker_ohos"
+      path: "packages/image_picker/image_picker"
   mime: ^1.0.4
-  path_provider: 2.1.0
-  path_provider_ohos:
+  path_provider:
     git:
       url: "https://gitee.com/openharmony-sig/flutter_packages.git"
-      path: "packages/path_provider/path_provider_ohos"
-  path_provider_platform_interface: ^2.0.0
-  video_player: 2.7.1
-  video_player_ohos:
+      path: "packages/path_provider/path_provider"
+  video_player:
     git:
       url: "https://gitee.com/openharmony-sig/flutter_packages.git"
-      path: "packages/video_player/video_player_ohos"
-  webview_flutter: 4.2.4
-  webview_flutter_ohos:
+      path: "packages/video_player/video_player"
+  webview_flutter:
     git:
       url: "https://gitee.com/openharmony-sig/flutter_packages.git"
-      path: "packages/webview_flutter/webview_flutter_ohos"
-  webview_flutter_platform_interface: ^2.4.0
-
+      path: "packages/webview_flutter/webview_flutter"
 
 dev_dependencies:
   flutter_test:
