[ohos]更新FlutterBoost项目结构
详情：https://gitee.com/openharmony-sig/flutter_samples/blob/master/ohos/docs/09_specifications/update_flutter_plugin_structure.md

--- a/ohos/oh-package.json5
+++ b/ohos/oh-package.json5
@@ -1,13 +1,11 @@
 {
   "name": "flutter_boost",
-  "version": "1.0.0",
-  "description": "Please describe the basic information.",
+  "version": "4.5.6",
+  "description": "The next-generation Flutter-Native hybrid solution.",
   "main": "",
   "author": "",
-  "license": "",
+  "license": "MIT",
   "dependencies": {
-  },
-  "devDependencies": {
-    "@ohos/hypium": "1.0.6"
+    "@ohos/flutter_ohos": "file:har/flutter.har",
   }
 }
