--- a/ohos/build-profile.json5
+++ b/ohos/build-profile.json5
@@ -1,28 +1,10 @@
 {
-  "app": {
-    "signingConfigs": [],
-    "products": [
-      {
-        "name": "default",
-        "signingConfig": "default",
-        "compileSdkVersion": "4.1.0(11)",
-        "compatibleSdkVersion": "4.1.0(11)",
-        "runtimeOS": "HarmonyOS"
-      }
-    ],
-    "buildModeSet": [
-      {
-        "name": "debug",
-      },
-      {
-        "name": "release"
-      }
-    ]
+  "apiType": "stageMode",
+  "buildOption": {
   },
-  "modules": [
+  "targets": [
     {
-      "name": "flutter_boost",
-      "srcPath": "./flutter_boost"
+      "name": "default"
     }
   ]
 }
