[ohos]适配api12 & DevEco-5.0.3.300

--- a/example/ohos/hvigor/hvigor-config.json5
+++ b/example/ohos/hvigor/hvigor-config.json5
@@ -1,6 +1,5 @@
 {
-  "hvigorVersion": "file:../dependencies/hvigor-4.2.0.tgz",
+  "modelVersion": "5.0.0",
   "dependencies": {
-    "@ohos/hvigor-ohos-plugin": "file:../dependencies/hvigor-ohos-plugin-4.2.0.tgz"
   }
 }
