[ohos]解决因权限问题从系统剪贴板获取数据失败的问题

--- a/example/ohos/entry/src/main/module.json5
+++ b/example/ohos/entry/src/main/module.json5
@@ -36,6 +36,16 @@
       {
         "name": "ohos.permission.INTERNET"
       },
+      {
+        "name": "ohos.permission.READ_PASTEBOARD",
+        "reason": "$string:clipboard_reason",
+        "usedScene": {
+          "abilities": [
+            "FormAbility"
+          ],
+          "when":"inuse"
+        }
+      }
     ]
   }
 }
