--- a/example/ohos/oh-package.json5
+++ b/example/ohos/oh-package.json5
@@ -11,6 +11,12 @@
   "version": "1.0.0",
   "dependencies": {},
   "overrides": {
-    "@ohos/flutter_ohos": "file:./har/flutter.har"
+    "@ohos/flutter_ohos": "file:./har/flutter.har",
+    "image_picker_ohos": "file:./har/image_picker_ohos.har",
+    "path_provider_ohos": "file:./har/path_provider_ohos.har",
+    "video_player_ohos": "file:./har/video_player_ohos.har",
+    "webview_flutter_ohos": "file:./har/webview_flutter_ohos.har",
+    "flutter_boost": "file:./har/flutter_boost.har",
+    "@ohos/flutter_module": "file:./entry"
   }
 }
